# -*- mode: org -*-

* Version 1.3.3
** Internal changes
- improve qqplot2 and object2script

* Version 1.3.2
** User visble changes 
- New function: object2script

** Internal changes
- fix bugs ...

* Version 1.3.1
** User visble changes 
- integrate new functions: cvCheck, qqplot2, residplot (previously in lavaSearch2)