@@ -51,6 +51,7 @@ export(as.boot)
 export(boot2pvalue)
 export(bootPb)
 export(bootReg)
+export(breakpoint)
 export(calcPartialResiduals)
 export(calcR2)
 export(cor.testDT)
