@@ -1,11 +1,17 @@
 # -*- mode: org -*-
 
 * Version 1.3.3
+** User visible changes
+- add DIM and NAMES
+- add mcrGam function to fit monotone gam 
+- add breakpoint function to estimate breakpoints like in the segmented package.
 ** Internal changes
 - improve qqplot2 and object2script
+- adapt ggSurv to the new version of riskRegression
+- add appveyor
 
 * Version 1.3.2
-** User visble changes 
+** User visible changes 
 - New function: object2script
 
 ** Internal changes
